--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -16,7 +16,8 @@
   --title-color: hsl(var(--hue), var(--sat), 20%);
   --title-color-dark: hsl(var(--hue), var(--sat), 0%);
   --text-color: hsl(var(--hue), var(--sat), 46%);
-  --body-color: hsl(var(--hue), var(--sat), 98%);
+  /* --body-color: hsl(var(--hue), var(--sat), 98%); */
+  --body-color: hsl(35, 40%, 90%);
   --container-color: #fff;
 
   /*========== Font and typography ==========*/
