--- a/portfolio/src/components/header/Header.css
+++ b/portfolio/src/components/header/Header.css
@@ -52,6 +52,11 @@
     color: var(--light-grey);
 }
 
+/*Change Background header*/
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
 /*=============== BREAKPOINTS ===============*/
 /* For medium devices */
 @media screen and (max-width: 768px) {
